--- a/vue-purhase/package.json
+++ b/vue-purhase/package.json
@@ -10,10 +10,13 @@
     "axios": "^1.3.2",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.7",
     "echarts": "^5.4.1",
     "element-ui": "^2.4.5",
     "express": "^4.18.2",
     "mockjs": "^1.1.0",
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.20",
     "querystring": "^0.2.1",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
