--- a/vue-purhase/package.json
+++ b/vue-purhase/package.json
@@ -7,6 +7,8 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@wangeditor/editor": "^5.1.23",
+    "@wangeditor/editor-for-vue": "^1.0.2",
     "axios": "^1.3.2",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
@@ -15,12 +17,14 @@
     "element-ui": "^2.4.5",
     "express": "^4.18.2",
     "mockjs": "^1.1.0",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.20",
     "querystring": "^0.2.1",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
