--- a/vue-purhase/package.json
+++ b/vue-purhase/package.json
@@ -20,6 +20,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.20",
+    "normalize.css": "^8.0.1",
     "querystring": "^0.2.1",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
