--- a/vue-purhase/package.json
+++ b/vue-purhase/package.json
@@ -23,6 +23,9 @@
     "normalize.css": "^8.0.1",
     "querystring": "^0.2.1",
     "vue": "^2.6.14",
+    "vue-i18n": "^7.3.3",
+    "vue-json-excel": "^0.3.0",
+    "vue-pdf": "^1.2.4",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2",
     "vuex-persistedstate": "^4.1.0"
