--- a/vue-purhase/package.json
+++ b/vue-purhase/package.json
@@ -16,6 +16,7 @@
     "echarts": "^5.4.1",
     "element-ui": "^2.4.5",
     "express": "^4.18.2",
+    "lodash": "^4.17.21",
     "mockjs": "^1.1.0",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
