--- a/vue-purhase/package.json
+++ b/vue-purhase/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "build:prod": "vue-cli-service build --mode prod",
+    "build:dev": "vue-cli-service build --mode dev",
+    "test": "vue-cli-service test:unit"
   },
   "dependencies": {
     "@wangeditor/editor": "^5.1.23",
